--- a/style.css
+++ b/style.css
@@ -1,92 +1,169 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-.Marque-container {
-  max-width: 1140px;
-  margin: 0px auto;
-}
+body {
+  font-family: 'Montserrat', sans-serif;
 
-.Marque-normal {
-  padding: 40px 0px;
-}
-
-.Marquee {
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 40px;
- 
 }
 
-.marquee-card {
-  background-color: #646464;
-  padding: 20px;
-  border-radius: 20px;
+.marquee-container {
   display: flex;
-  justify-content: center;
-  align-items: start;
+  flex-direction: column;
   gap: 20px;
 }
 
-.marquee-card-logo {
-  width: 50px;
-  height: 50px;
+:root {
+  --marquee-width: 100vw;
+  --marquee-height: 20vh;
+  --marquee-elements-displayed: 4;
+  --marquee-element-width: calc(var(--marquee-width) / var(--marquee-elements-displayed));
+  --marquee-animation-duration: calc(var(--marquee-elements) * 3s);
 }
 
-.marquee-card-logo img {
+.marquee {
+  width: var(--marquee-width);
+  height: var(--marquee-height);
+
+  overflow: hidden;
+  position: relative;
+}
+
+.marquee:before,
+.marquee:after {
+  position: absolute;
+  top: 0;
+  width: 10rem;
+  /* Adjust width as needed */
+  height: 100%;
+  content: "";
+  z-index: 1;
+}
+
+.marquee:before {
+  left: 0;
+}
+
+.marquee:after {
+  right: 0;
+}
+
+.marquee-content {
+  list-style: none;
+  height: 100%;
+  display: flex;
+  gap: 20px;
+
+  animation: scrolling var(--marquee-animation-duration) linear infinite;
+}
+
+
+.marquee-content li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  background-color: #282828;
+  color: #eee;
+  flex-shrink: 0;
+  width: var(--marquee-element-width);
+  max-height: 100%;
+  padding: 20px;
+}
+
+.marquee-card {
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  gap: 10px;
+}
+
+.marquee-company-logo {
+  width: 80px;
+  height: 55px;
+}
+
+.marquee-company-logo img {
   width: 100%;
   height: 100%;
+  border-radius: 100%;
 }
 
-.marquee-social-icon {
+.marquee-testimonial-social-icons {
   width: 40px;
   height: 40px;
 }
 
-.marquee-social-icon img {
+.marquee-testimonial-social-icons img {
   width: 100%;
   height: 100%;
 }
 
-@keyframes marquee-scroll {
-  from {
-    transform: translateX(0%);
+.marquee-testimonial-content {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.marquee-testimonial-content h6 {
+  font-size: 16px;
+}
+
+@media (max-width: 600px) {
+  html {
+    font-size: 12px;
   }
-  to {
-    transform: translateX(100%);
+
+  :root {
+    --marquee-width: 100vw;
+    --marquee-height: 16vh;
+    --marquee-elements-displayed: 1.5;
+  }
+
+  .marquee:before,
+  .marquee:after {
+    width: 5rem;
+  }
+}
+
+/* Additional CSS for the second marquee (left to right) */
+.marquee-reverse:before {
+  left: 0;
+}
+
+.marquee-reverse:after {
+  right: 0;
+}
+
+.marquee-reverse .marquee-content {
+  animation: scrolling-reverse var(--marquee-animation-duration) linear infinite;
+}
+
+@keyframes scrolling {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-100%);
   }
 }
 
 
- /* MARQUEE LOGO*/
- .t-testimonial-marquee {
-    will-change: transform;
-    animation: work-example 56s linear infinite;
-    /* manipulate the speed of the marquee by changing "40s" line above*/
-  }
-  .reverse {
-    will-change: transform;
-    animation: work-example-2 56s linear infinite;
-    /* manipulate the speed of the marquee by changing "40s" line above*/
+@keyframes scrolling-reverse {
+  0% {
+    transform: translateX(-100%);
   }
 
-  @keyframes work-example-2 {
-    from {
-      transform: translateX(-50%);
-    }
-    to {
-      transform: translateX(0%);
-    }
+  100% {
+    transform: translateX(0%);
   }
-
-  @keyframes work-example {
-    from {
-      transform: translateX(0%);
-    }
-    to {
-      transform: translateX(-50%);
-    }
-  }
+}
